Make Lesson Card for Continue watching , extract the image into seperate reuseable component and use it in MainLesson component

--- a/livecodehub/src/styles/base/_variables.scss
+++ b/livecodehub/src/styles/base/_variables.scss
@@ -3,6 +3,7 @@ $primary-color-shadow: #edcb454b;
 $primary-text-color: #f2f2f2;
 $background-one-color: black;
 $background-two-color: #1d1d1d;
+$background-three-color: #0f0f0f;
 //TODO FIX COLORS
 //screen
 $xsmall: 430px;
