--- a/livecodehub/src/styles/components/Sidebar/Sidebar.module.scss
+++ b/livecodehub/src/styles/components/Sidebar/Sidebar.module.scss
@@ -1,11 +1,8 @@
 @use "@/styles/base/_variables.scss";
+@use "@/styles/base/_mixins.scss";
 
 .container {
-  background-color: variables.$background-three-color;
-  color: white;
-  height: 100vh;
-  width: 300px;
-  box-shadow: 0px 0px 5px variables.$primary-color;
+  @include mixins.createStaticBar(300px, variables.$background-three-color);
   .sidebar {
     padding: 50px 0px 0px 25px;
     font-family: var(--font-inria-sans);
