rest of pervious commit

--- a/livecodehub/src/styles/components/cards/ContinueLearning.module.scss
+++ b/livecodehub/src/styles/components/cards/ContinueLearning.module.scss
@@ -4,8 +4,7 @@
   color: white;
   border-radius: 15px;
   font-family: var(--font-inria-sans);
-  max-width: 300px;
-  min-width: 250px;
+  width: 250px;
 
   .content {
     padding: 10px 20px;
