--- a/livecodehub/src/styles/components/cards/MainLesson.module.scss
+++ b/livecodehub/src/styles/components/cards/MainLesson.module.scss
@@ -1,15 +1,19 @@
 @use "@/styles/base/_variables.scss";
 .card {
-  padding: 10px;
+  padding: 15px;
+  border-radius: 15px;
   color: white;
   display: flex;
   flex-direction: column;
   gap: 5px;
   text-align: center;
   max-width: 350px;
+  background-color: variables.$background-three-color;
+  margin: auto;
   @media screen and (min-width: variables.$small) {
     flex-direction: row;
-    max-width: 750px;
+    max-width: 1000px;
+    margin: 0;
   }
 
   .content {
