--- a/livecodehub/src/styles/base/_mixins.scss
+++ b/livecodehub/src/styles/base/_mixins.scss
@@ -4,6 +4,51 @@
   background-color: $bachground-color;
   color: white;
   height: 100vh;
+  z-index: 2;
+  position: fixed;
   width: $width;
   box-shadow: 0px 0px 5px variables.$primary-color;
+  flex: 1;
+  display: none;
+  @include breakpoint(variables.$xlarge) {
+    position: sticky;
+    top: 0;
+    width: $width;
+    display: flex;
+    flex-direction: column;
+  }
+  &.open {
+    display: flex;
+    flex-direction: column;
+  }
 }
+
+@mixin sideBarsCloseButton($side) {
+  position: absolute;
+  top: 10px;
+  #{$side}: 10px;
+  background-color: variables.$primary-color;
+  border-radius: 50%;
+  border: none;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  @include breakpoint(variables.$xlarge) {
+    display: none;
+  }
+}
+
+@mixin breakpoint($breakpoint) {
+  @media screen and (min-width: $breakpoint) {
+    @content;
+  }
+}
+//screen
+// $xsmall: 430px;
+// $small: 768px;
+// $medium: 1024px;
+// $large: 1280px;
+// $xlarge: 1440px;
