--- a/livecodehub/src/styles/components/Sections/MainPageSections.module.scss
+++ b/livecodehub/src/styles/components/Sections/MainPageSections.module.scss
@@ -19,21 +19,23 @@
     border: none;
     position: absolute;
     background-color: rgba(255, 255, 255, 0.899);
-    width: 38px;
-    height: 38px;
+    width: 30px;
+    height: 30px;
     background-clip: border-box;
     background-size: cover;
     border-radius: 50%;
     top: 50%;
+    transform: translateZ(10px);
+    z-index: 1;
     box-shadow: 0px 0px 15px variables.$primary-color;
     cursor: pointer;
   }
   .leftbtn {
     background-image: url("/utils/arrowLeft.png");
-    left: -24px;
+    left: 10px;
   }
   .rightbtn {
     background-image: url("/utils/arrowRight.png");
-    right: -24px;
+    right: 10px;
   }
 }
