--- a/livecodehub/src/styles/components/ui/SearchBar.module.scss
+++ b/livecodehub/src/styles/components/ui/SearchBar.module.scss
@@ -5,8 +5,8 @@
   border: 2px solid white;
   border-radius: 50px;
   padding: 3px 20px;
-  max-width: 600px;
-  margin: 20px auto;
+  max-width: 500px;
+  margin: auto;
   input {
     background-color: transparent;
     border: none;
