--- a/livecodehub/src/styles/global.scss
+++ b/livecodehub/src/styles/global.scss
@@ -9,3 +9,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: variables.$background-one-color;
 }
+* {
+  box-sizing: border-box;
+}
