--- a/livecodehub/src/app/auth/login/page.module.scss
+++ b/livecodehub/src/app/auth/login/page.module.scss
@@ -1,6 +1,7 @@
 @use "@/styles/base/_variables.scss";
 .page {
   display: flex;
+  flex: 1;
   flex-direction: column;
   @media screen and (min-width: variables.$small) {
     flex-direction: row;
