--- a/livecodehub/src/app/auth/signup/page.module.scss
+++ b/livecodehub/src/app/auth/signup/page.module.scss
@@ -1,5 +1,6 @@
 @use "@/styles/base/_variables.scss";
 .page {
+  flex: 1;
   display: flex;
   flex-direction: column;
   @media screen and (min-width: variables.$small) {
