change userInfo routes to use students table from database rather than user, because of future update for database, and seperate between student and build logic for fetch and display the user info

--- a/livecodehub/src/styles/components/userBar/UserBar.module.scss
+++ b/livecodehub/src/styles/components/userBar/UserBar.module.scss
@@ -1,16 +1,16 @@
 @use "@/styles/base/_variables.scss";
 @use "@/styles/base/_mixins.scss";
 .container {
-  @include mixins.createStaticBar(300px, variables.$background-three-color);
   right: 0;
   align-items: center;
   padding-top: 60px;
   font-family: var(--font-inria-sans);
   z-index: 20;
+  @include mixins.createStaticBar(300px, variables.$background-three-color);
   .closeButton {
     @include mixins.sideBarsCloseButton(right);
   }
-  img:not(.colse) {
+  img:not(.close) {
     border-radius: 50%;
     width: 100px;
     height: 100px;
