--- a/livecodehub/src/styles/components/header/header.module.scss
+++ b/livecodehub/src/styles/components/header/header.module.scss
@@ -11,6 +11,9 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    &:first-child {
+      margin-left: 20px;
+    }
     &:last-child {
       margin-right: 20px;
     }
