--- a/livecodehub/src/styles/components/ui/SectionHeader.module.scss
+++ b/livecodehub/src/styles/components/ui/SectionHeader.module.scss
@@ -6,6 +6,7 @@
   margin-bottom: 25px;
   padding-bottom: 10px;
   padding-right: 20px;
+  margin-left: 20px;
   width: fit-content;
   border-bottom: 1px solid variables.$primary-color;
   font-family: var(--font-inria-sans);
