--- a/livecodehub/src/styles/base/_variables.scss
+++ b/livecodehub/src/styles/base/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #edcb45;
 $primary-color-shadow: #edcb454b;
 $primary-text-color: #f2f2f2;
 $secondary-text-color: #e1e1e1;
+$gray-text-color: #b4b4b4;
 $background-one-color: black;
 $background-two-color: #1d1d1d;
 $background-three-color: #0f0f0f;
